DE6459 - Terms Conditions Web View memory leaks

--- a/Discover-Bank-Phone/res/layout/payment_terms_and_conditions.xml
+++ b/Discover-Bank-Phone/res/layout/payment_terms_and_conditions.xml
@@ -22,7 +22,7 @@
          
     </RelativeLayout>
 
-    <WebView
+    <FrameLayout
         android:id="@+id/agreement_web_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
