--- a/Discover-Commons/res/layout/simple_content_modal.xml
+++ b/Discover-Commons/res/layout/simple_content_modal.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     style="@style/common_modal_black_bg"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -33,4 +33,4 @@
             android:layout_alignParentRight="true" />
     </RelativeLayout>
 
-</RelativeLayout>
+</LinearLayout>
