--- a/Discover-Bank-Phone/res/drawable/login_white_panel.xml
+++ b/Discover-Bank-Phone/res/drawable/login_white_panel.xml
@@ -2,6 +2,7 @@
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android" >
 
     <!-- Gradient -->
+    <item android:drawable="@drawable/login_white_bkgrd_gradient"/>
 
     <!-- White Panel -->
     <item
