US7225 - 13.4 elements code merge 7/23 - Common Project

--- a/Discover-Commons/res/values/styles.xml
+++ b/Discover-Commons/res/values/styles.xml
@@ -236,6 +236,14 @@
         <item name="android:padding">@dimen/forms_inner_padding</item>
     </style>
     
+    
+    <style name="fastcheck_error_body">
+       <item name="android:background">@drawable/home_list_item</item>
+       <item name="android:padding">0dp</item>
+    </style>
+    
+    
+    
     <!-- NEED HELP? TEXT / #3d484d / 34pt font-size / centered / bold -->
     <style name="common_need_help_text" parent="body_copy">
         <item name="android:textAppearance">?android:attr/textAppearanceSmall</item>
