--- a/Discover-Card-Phone/res/layout/choose_period.xml
+++ b/Discover-Card-Phone/res/layout/choose_period.xml
@@ -4,7 +4,7 @@
     android:layout_height="fill_parent"
     android:background="@drawable/light_gray_bkgrd">
 	
-	<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+	<LinearLayout 
 	    android:layout_width="match_parent"
 	    android:layout_height="wrap_content"
 	    android:orientation="vertical"
