--- a/Discover-Card-Phone/res/layout/modal_late_payment_warning_top.xml
+++ b/Discover-Card-Phone/res/layout/modal_late_payment_warning_top.xml
@@ -4,7 +4,7 @@
     android:layout_height="fill_parent"
     android:padding="@dimen/forms_inner_padding">
 
-    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    <RelativeLayout 
 	    android:layout_width="fill_parent"
 	    android:layout_height="fill_parent"
 	    android:padding="@dimen/forms_inner_padding"  >
