--- a/Discover-Card-Phone/res/layout/passcode_base_activity.xml
+++ b/Discover-Card-Phone/res/layout/passcode_base_activity.xml
@@ -1,102 +1,111 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/white"
-    android:longClickable="false"
     android:clickable="true"
+    android:longClickable="false"
     android:orientation="vertical" >
 
-    <TextView
-        android:id="@+id/headerTV"
-        android:layout_width="wrap_content"
-        android:layout_height="60dp"
-        android:layout_marginLeft="16dp"
-        android:paddingRight="16dp"
-        android:layout_marginTop="20dp"
-        android:textColor="@color/black"
-        android:textSize="18sp"
-        android:typeface="sans" />
+    <ScrollView
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:layout_weight="0.2"
+        android:fillViewport="true" >
 
-    <LinearLayout
-        android:id="@+id/passcodeFields"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/headerTV"
-        android:layout_centerHorizontal="true"
-         >
+        <RelativeLayout
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content" >
 
-        <EditText
-            android:id="@+id/passcode01"
-            style="@style/PasscodeDigit"
-            android:background="@drawable/rectangle"
-            android:ems="10"
-            android:inputType="phone" >
+            <TextView
+                android:id="@+id/headerTV"
+                android:layout_width="wrap_content"
+                android:layout_height="60dp"
+                android:layout_marginLeft="16dp"
+                android:layout_marginTop="20dp"
+                android:paddingRight="16dp"
+                android:textColor="@color/black"
+                android:textSize="18sp"
+                android:typeface="sans" />
 
-            <requestFocus />
-        </EditText>
+            <LinearLayout
+                android:id="@+id/passcodeFields"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/headerTV"
+                android:layout_centerHorizontal="true" >
 
-        <EditText
-            android:id="@+id/passcode02"
-            style="@style/PasscodeDigit"
-            android:background="@drawable/rectangle"
-            android:ems="10"
-            android:gravity="center"
-            android:inputType="phone" />
+                <EditText
+                    android:id="@+id/passcode01"
+                    style="@style/PasscodeDigit"
+                    android:background="@drawable/rectangle"
+                    android:ems="10"
+                    android:inputType="phone" >
 
-        <EditText
-            android:id="@+id/passcode03"
-            style="@style/PasscodeDigit"
-            android:background="@drawable/rectangle"
-            android:ems="10"
-            android:gravity="center"
-            android:inputType="phone" />
+                    <requestFocus />
+                </EditText>
 
-        <EditText
-            android:id="@+id/passcode04"
-            style="@style/PasscodeDigit"
-            android:background="@drawable/rectangle"
-            android:ems="10"
-            android:gravity="center"
-            android:inputType="phone" />
+                <EditText
+                    android:id="@+id/passcode02"
+                    style="@style/PasscodeDigit"
+                    android:background="@drawable/rectangle"
+                    android:ems="10"
+                    android:gravity="center"
+                    android:inputType="phone" />
 
-    </LinearLayout>
+                <EditText
+                    android:id="@+id/passcode03"
+                    style="@style/PasscodeDigit"
+                    android:background="@drawable/rectangle"
+                    android:ems="10"
+                    android:gravity="center"
+                    android:inputType="phone" />
 
-     <ImageView
-         android:id="@+id/validation"
-         android:layout_width="wrap_content"
-         android:layout_height="wrap_content"
-         android:layout_gravity="center"
-         android:layout_marginLeft="3dp"
-         android:src="@drawable/tick_green"
-         android:layout_toRightOf="@+id/passcodeFields"
-         android:layout_alignBottom="@+id/passcodeFields"
-         android:layout_alignTop="@+id/passcodeFields"
-         android:visibility="invisible"
-          />
+                <EditText
+                    android:id="@+id/passcode04"
+                    style="@style/PasscodeDigit"
+                    android:background="@drawable/rectangle"
+                    android:ems="10"
+                    android:gravity="center"
+                    android:inputType="phone" />
+            </LinearLayout>
 
-    <TextView
-        android:id="@+id/passcodeGuidelines"
-        style="@style/PasscodeGuidelines"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="top"
-        android:layout_marginLeft="12dp"
-        android:layout_marginTop="20dp"
-        android:text="@string/passcode_guidelines_link"
-        android:layout_below="@+id/passcodeFields"
-        android:textSize="16sp"
-        android:textStyle="bold" />
-    
+            <ImageView
+                android:id="@+id/validation"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignBottom="@+id/passcodeFields"
+                android:layout_alignTop="@+id/passcodeFields"
+                android:layout_gravity="center"
+                android:layout_marginLeft="3dp"
+                android:layout_toRightOf="@+id/passcodeFields"
+                android:src="@drawable/tick_green"
+                android:visibility="invisible" />
+
+            <TextView
+                android:id="@+id/passcodeGuidelines"
+                style="@style/PasscodeGuidelines"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/passcodeFields"
+                android:layout_gravity="top"
+                android:layout_marginLeft="12dp"
+                android:layout_marginTop="20dp"
+                android:text="@string/passcode_guidelines_link"
+                android:textSize="16sp"
+                android:textStyle="bold" />
+        </RelativeLayout>
+    </ScrollView>
+
     <RelativeLayout
         android:id="@+id/footer"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="16dp"
+        android:layout_marginBottom="10dp"
+        android:layout_weight="0.8"
         android:gravity="bottom"
         android:overScrollMode="never" >
 
         <include layout="@layout/card_fragment_footer" />
     </RelativeLayout>
-
-</RelativeLayout>
+</LinearLayout>
