--- a/Discover-Card-Phone/res/layout/whats_new.xml
+++ b/Discover-Card-Phone/res/layout/whats_new.xml
@@ -6,7 +6,7 @@
 	android:fadingEdge="none"
     android:overScrollMode="never">
 	
-    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    <RelativeLayout 
         android:id="@+id/whats_new_relative"
         android:layout_width="match_parent"
         android:layout_height="521dp"
