--- a/Discover-Bank-Phone/res/layout/fastcheck_frame.xml
+++ b/Discover-Bank-Phone/res/layout/fastcheck_frame.xml
@@ -27,16 +27,28 @@
             style="@style/fastcheck_bottom_bar_button"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_weight="0.50"
-            android:text="@string/privacy_and_security" />
-
+            android:layout_weight="0.49"
+            android:text="@string/privacy_and_security" 
+            android:gravity="center_vertical|right"/>
+        
+        <TextView
+        	android:id="@+id/divider"
+        	style="@style/fastcheck_bottom_bar_divider"
+        	android:layout_width="wrap_content"
+        	android:layout_height="wrap_content"
+        	android:text="@string/card_divider"
+        	android:layout_weight="0.02"
+        	android:gravity="center_vertical|center_horizontal"/>
+  
         <Button
             android:id="@+id/fastcheck_provide_feedback_button"
             style="@style/fastcheck_bottom_bar_button"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_weight="0.50"
+            android:layout_weight="0.49"
+            android:gravity="center_vertical|left"
             android:text="@string/feedback_text" />
+
     </LinearLayout>
 
 </RelativeLayout>
