DE7015 - Fixed the Atm Locator Filter On/Off switch getting cut off.
Test Cases:
- Validate that the on/off switch completely shows in On position and Off.

--- a/Discover-Bank-Phone/res/layout/atm_locator_map_search_bar.xml
+++ b/Discover-Bank-Phone/res/layout/atm_locator_map_search_bar.xml
@@ -119,8 +119,8 @@
             <com.discover.mobile.common.ui.toggle.DiscoverToggleSwitch
                 android:id="@+id/filter_enable"
                 style="@style/bank_switch_light"
-                android:layout_width="75dp"
-                android:layout_height="30dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
                 android:layout_marginLeft="@dimen/between_related_elements_padding" />
         </LinearLayout>
 
