--- a/Discover-Bank-Phone/res/layout/customer_service.xml
+++ b/Discover-Bank-Phone/res/layout/customer_service.xml
@@ -114,6 +114,12 @@
             android:layout_height="wrap_content"
             android:layout_below="@+id/bank_mail_address_list"
             custom:footerType="11" />
+        
+        <com.discover.mobile.common.help.HelpWidget
+            android:id="@+id/help"
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/help_bar_height_two_items" 
+            android:visibility="gone"/>
     </RelativeLayout>
 
 </ScrollView>
