--- a/Discover-Bank-Phone/res/layout/login_start.xml
+++ b/Discover-Bank-Phone/res/layout/login_start.xml
@@ -90,6 +90,7 @@
                     android:layout_below="@+id/discoverLogo"
                     android:layout_marginTop="@dimen/groups_of_elements_padding"
                     android:layout_toRightOf="@+id/error_exclamation"
+                    android:layout_centerInParent="true"
                     android:gravity="center_horizontal"
                     android:paddingRight="@dimen/element_side_padding"
                     android:paddingLeft="@dimen/element_side_padding"
