US9633 - Changed the provide feedback url to be based on what screen you are on.
Test Cases:
	Confirmed the following pages link to the right location:
	Login
	Logged In Contact Us
	Not Logged In Contact Us
	Account Summary
	Transfer Money Confirmation
	Deposit Check Confirmation
	Pay Bills Confirmation
	Manage Payees Confirmation

--- a/Discover-Bank-Phone/res/layout/bank_account_summary_view.xml
+++ b/Discover-Bank-Phone/res/layout/bank_account_summary_view.xml
@@ -53,7 +53,8 @@
             android:layout_height="wrap_content"
             android:layout_below="@+id/content" 
             style="@style/bank_layout_footer_style"
-            custom:footerType="3"/>
+            custom:footerType="3"
+            custom:provideFeedbackUrl="@string/bank_account_summary_feedback_url"/>
       
     </RelativeLayout>
 
