--- a/Discover-Bank-Phone/res/layout/bank_enter_payee.xml
+++ b/Discover-Bank-Phone/res/layout/bank_enter_payee.xml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView 
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:custom="http://schemas.android.com/apk/res-auto/com.discover.mobile.bank"
     android:id="@+id/scrollView1"
     android:fillViewport="true"
     android:layout_width="match_parent"
@@ -77,7 +79,8 @@
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:layout_below="@+id/continue_button" 
-            style="@style/bank_layout_footer_style"/>
+            style="@style/bank_layout_footer_style"
+            custom:provideFeedbackUrl="@string/bank_bill_pay_feedback_url"/>
 	
 	</RelativeLayout>
 </ScrollView>
