--- a/Discover-Bank-Phone/res/layout/bank_frequency_widget.xml
+++ b/Discover-Bank-Phone/res/layout/bank_frequency_widget.xml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView 
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:custom="http://schemas.android.com/apk/res-auto/com.discover.mobile.bank"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fillViewport="true" >
@@ -44,7 +46,8 @@
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:layout_below="@+id/list" 
-            style="@style/bank_layout_footer_style"/>
+            style="@style/bank_layout_footer_style"
+            custom:provideFeedbackUrl="@string/bank_transfer_funds_feedback_url" />
     </RelativeLayout>
 
 </ScrollView>
