--- a/Discover-Bank-Phone/res/layout/bank_open_account_view.xml
+++ b/Discover-Bank-Phone/res/layout/bank_open_account_view.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView 
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:custom="http://schemas.android.com/apk/res-auto/com.discover.mobile.bank"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -44,7 +45,8 @@
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:layout_below="@+id/openAccount"
-            custom:footerType="3" />
+            custom:footerType="3"
+            custom:provideFeedbackUrl="@string/bank_account_summary_feedback_url" />
     </RelativeLayout>
 
 </ScrollView>
