--- a/Discover-Bank-Phone/res/layout/bank_transfer_select_account.xml
+++ b/Discover-Bank-Phone/res/layout/bank_transfer_select_account.xml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView 
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:custom="http://schemas.android.com/apk/res-auto/com.discover.mobile.bank"
     android:id="@+id/main_layout"
     android:layout_width="match_parent"
     android:layout_height="fill_parent"
@@ -94,7 +96,8 @@
             android:layout_height="wrap_content"
             android:layout_alignParentBottom="true"
             android:layout_below="@+id/content_table_internal_accounts"
-            android:layout_marginTop="@dimen/groups_of_elements_padding" />
+            android:layout_marginTop="@dimen/groups_of_elements_padding"
+            custom:provideFeedbackUrl="@string/bank_transfer_funds_feedback_url" />
     </RelativeLayout>
 
 </ScrollView>
