--- a/Discover-Bank-Phone/res/layout/schedule_payment.xml
+++ b/Discover-Bank-Phone/res/layout/schedule_payment.xml
@@ -1,4 +1,6 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout 
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:custom="http://schemas.android.com/apk/res-auto/com.discover.mobile.bank"
     android:id="@+id/main_payment_content"
     android:layout_width="wrap_content"
     android:layout_height="fill_parent"
@@ -311,7 +313,8 @@
                 style="@style/bank_layout_footer_style"
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
-                android:layout_below="@+id/cancel_button" />
+                android:layout_below="@+id/cancel_button" 
+                custom:provideFeedbackUrl="@string/bank_bill_pay_feedback_url"/>
         </RelativeLayout>
     </ScrollView>
 
