--- a/Discover-Bank-Phone/res/values/env.xml
+++ b/Discover-Bank-Phone/res/values/env.xml
@@ -28,8 +28,17 @@
 	<string name="bank_google_terms_url">http://www.google.com/intl/en-US_US/help/terms_maps.html</string>
 	
 	<!-- Provide Feedback -->
-	<string name="feedback_url">"https://secure.opinionlab.com/ccc01/o.asp?id=WcvPUBHp&amp;refer=http://android.discoverbank.com(null)&amp;custom_var=DiscoverMobileVersion=5.2.0</string>
 	<string name="card_provide_feedback_url">https://secure.opinionlab.com/ccc01/o.asp?id=MFKupcjM&amp;referer=https://mobileapp.discover.com/cardHome-pg&amp;custom_var=DiscoverMobileVersion=5.2.0</string>
+	<string name="bank_login_provide_feedback_url">http://android.discoverbank.com/banklogin</string>
+	<string name="bank_contact_us_logged_out_feedback_url">http://android.discoverbank.com/nonauthcontactus</string>
+	<string name="bank_account_summary_feedback_url">http://android.discoverbank.com/accountsummary</string>
+	<string name="bank_transfer_funds_feedback_url">http://android.discoverbank.com/fundstransfer</string>
+	<string name="bank_bill_pay_feedback_url">http://android.discoverbank.com/billpay</string>
+	<string name="bank_check_deposit_feedback_url">http://android.discoverbank.com/mobilecheckdeposit</string>
+	<string name="bank_contact_us_logged_in_feedback_url">http://android.discoverbank.com/authcontactus</string>
+	
+	<!-- Legacy Provide Feedback Url -->
+	<string name="feedback_url">"https://secure.opinionlab.com/ccc01/o.asp?id=WcvPUBHp&amp;refer=http://android.discoverbank.com(null)&amp;custom_var=DiscoverMobileVersion=5.2.0</string>
 	
 	<!-- Assorted -->
 	<string name="open_account_url">https://www.discover.com/online-banking/savings.html</string>
