--- a/Discover-Bank-Phone/res/layout/bank_account_activity_header.xml
+++ b/Discover-Bank-Phone/res/layout/bank_account_activity_header.xml
@@ -19,18 +19,23 @@
         android:orientation="horizontal">
 	     <View
 	      	android:id="@+id/arrow"
-	     	android:layout_width="15dp"
-	     	android:layout_height="15dp"    
+	     	android:layout_width="12dp"
+	     	android:layout_height="12dp"    
 	        android:layout_marginRight="@dimen/between_related_elements_padding"
 	        android:layout_gravity="center_vertical"
 	     	android:background="@drawable/drk_blue_arrow_down" />
 	
 	    <TextView
 	        android:id="@+id/title_text"
-	        style="@style/page_title"
 	        android:layout_width="wrap_content"
 	        android:layout_height="wrap_content"
-	        android:text="@string/activity_title" />
+	        android:maxLines="1"
+	        android:maxLength="30"
+	        android:ellipsize="end"
+	        android:text="@string/activity_title"
+	        android:textColor="@color/title"
+	        android:textSize="18sp"
+	        android:textStyle="bold" />
 	</LinearLayout>
 	
     <RelativeLayout
