DE7116 headers misaligned.  When there 3 bar nav button and logout button where not present the headers in action bar looked misaligned.  Fixed this by always centering the  header text horizontally.  Tested by logging in and navigated to a page without the discover logo.  Verified text was center aligned.  Logged out and nav'ed to Contact us.  Verified that the header was center aligned

--- a/Discover-Commons/res/layout/action_bar_menu_layout.xml
+++ b/Discover-Commons/res/layout/action_bar_menu_layout.xml
@@ -34,7 +34,7 @@
         style="@style/action_bar_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_centerVertical="true"
+        android:layout_centerInParent="true"
         android:layout_toLeftOf="@+id/logout_button"
         android:layout_toRightOf="@+id/navigation_button" 
         android:singleLine="true"
