US7225 - 13.4 code merge 7/29 - Common Project

--- a/Discover-Commons/res/values/strings_login.xml
+++ b/Discover-Commons/res/values/strings_login.xml
@@ -86,5 +86,7 @@
     
 	<!-- Fastcheck, aka QuickView -->
 	<string name="gotoFastcheckBtnText">Quick view</string>
+	<string name="passcodeInvalidAttempt">Invalid Passcode entered. Please try again.</string>
+	<string name="forgotPasscodeText">Log in with your User ID and Password to create your new Passcode.</string>
     
 </resources>
