--- a/Discover-Card-Phone/res/layout/register_create_credentials.xml
+++ b/Discover-Card-Phone/res/layout/register_create_credentials.xml
@@ -13,16 +13,16 @@
         android:id="@+id/main_scroll"
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
-        android:background="@drawable/light_gray_bkgrd" >
+        android:background="@color/card_body_color" >
 
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:focusable="true"
             android:focusableInTouchMode="true"
-            android:paddingBottom="@dimen/forms_inner_padding"
-            android:paddingLeft="@dimen/forms_inner_padding"
-            android:paddingRight="@dimen/forms_inner_padding"
+            android:paddingBottom="18dp"
+            android:paddingLeft="16dp"
+            android:paddingRight="16dp"
             android:paddingTop="18dp" >
 
             <TextView
