--- a/Discover-Card-Phone/res/layout/register_create_password.xml
+++ b/Discover-Card-Phone/res/layout/register_create_password.xml
@@ -15,12 +15,16 @@
         android:layout_below="@id/header" >
 
         <RelativeLayout
-            style="@style/WhiteTheme"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:focusable="true"
             android:focusableInTouchMode="true"
-            android:paddingTop="18dp" >
+            android:paddingTop="18dp" 
+            android:paddingBottom="18dp"
+            android:background="@color/card_body_color"
+            android:paddingLeft="16dp"
+            android:paddingRight="16dp"
+            >
 
             <TextView
                 android:id="@+id/account_info_main_error_label"
@@ -92,7 +96,6 @@
                 android:layout_width="fill_parent"
                 android:layout_height="44dp"
                 android:layout_below="@+id/forgot_pass_two_pass_label"
-                android:layout_marginLeft="4dp"
                 android:imeOptions="actionNext"
                 android:textColor="#8a9499"
                 android:textCursorDrawable="@null"
