--- a/Discover-Card-Phone/res/layout/register_enter_account_info.xml
+++ b/Discover-Card-Phone/res/layout/register_enter_account_info.xml
@@ -18,10 +18,9 @@
         <RelativeLayout
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="18dp"
             android:focusable="true"
             android:focusableInTouchMode="true"
-            android:paddingBottom="30dp"
+            android:paddingBottom="18dp"
             android:paddingLeft="16dp"
             android:paddingRight="16dp" >
 
@@ -34,6 +33,7 @@
                 android:text="@string/forgot_password_text"
                 android:textColor="#293033"
                 android:textSize="14sp"
+                android:paddingTop="18dp"
                 android:textStyle="normal" />
 
             <TextView
