--- a/Discover-Card-Phone/res/values/strings_help_strength_bar.xml
+++ b/Discover-Card-Phone/res/values/strings_help_strength_bar.xml
@@ -26,5 +26,9 @@ characters.</string>
     <string name="account_info_help_level1">Not valid</string>
     <string name="account_info_help_level2">Moderate</string>
     <string name="account_info_help_level3">Strong</string>
+<!--     13.4 Changes start -->
+    <string name="user_id_strength">User ID Strength</string>
+    <string name="password_strength">Password Strength</string>
+<!--     13.4 Changes end -->
 
 </resources>
