US9805 - Added the balance field to the transfer funds select account and pay bills fields.
Test Cases:
- Validated the balance field appears nicely in both transfer funds and pay bills in landscape and portrait.
- Validated the balance field appears correctly.

--- a/Discover-Bank-Phone/res/values/strings_bank_payment.xml
+++ b/Discover-Bank-Phone/res/values/strings_bank_payment.xml
@@ -63,7 +63,7 @@
  	<string name="schedule_pay_memo_opt">Memo (Optional)</string>
  	<string name="schedule_pay_button">Schedule Payment</string>
  	<string name="schedule_pay_memo">Memo</string>
- 	<string name="schedule_pay_spinner_body">Account Ending in</string>
+ 	<string name="schedule_pay_spinner_body">Ending in</string>
  	<string name="schedule_pay_cancel_title">Cancel This Action?</string>
  	<string name="schedule_pay_cancel_body">Are you sure you want to cancel? All information you have entered will be lost.</string>
  	<string name="schedule_pay_cancel_button_confirm">Cancel This Action</string>
