--- a/Discover-Card-Phone/res/values/error_code_mapping.xml
+++ b/Discover-Card-Phone/res/values/error_code_mapping.xml
@@ -29,20 +29,20 @@
 	<!-- 4032114 & 4032111 - Passcode Disabled but Login attempts remaining -->
     <string name="E_4032114">
         <![CDATA[
-        You\'ve tried to log in too many times with the incorrect Passcode or information. To protect your account security, we\'ve disabled Passcode login for your account. The next time you are able to successfully log into the app, you can create a new Passcode.
+        You\'ve tried to log in too many times with the incorrect Passcode. To protect your account security, we\'ve disabled Passcode login for your account. The next time you are able to successfully log into the app, you can create a new Passcode.
         <br/><br/>Please contact Customer Service at 1-877-742-7822 for assistance.
 		]]>
 	</string>
     <string name="E_4032111">
         <![CDATA[
-        You\'ve tried to log in too many times with the incorrect Passcode or information. To protect your account security, we\'ve disabled Passcode login for your account. The next time you are able to successfully log into the app, you can create a new Passcode.
+        You\'ve tried to log in too many times with the incorrect Passcode. To protect your account security, we\'ve disabled Passcode login for your account. The next time you are able to successfully log into the app, you can create a new Passcode.
         <br/><br/>Please contact Customer Service at 1-877-742-7822 for assistance.
 		]]>
 	</string>
     <!-- 4032110 - Passcode and ULR Lockout -->
     <string name="E_4032110">
         <![CDATA[
-        You\'ve tried to log in too many times with the incorrect Passcode or information. To protect your account security, we\'ve disabled Passcode login for your account. The next time you are able to successfully log into the app, you can create a new Passcode.
+        You\'ve tried to log in too many times with the incorrect Passcode. To protect your account security, we\'ve disabled Passcode login for your account. The next time you are able to successfully log into the app, you can create a new Passcode.
         <br/><br/>Please contact Customer Service at 1-877-742-7822 for assistance.
 		]]>
 	</string>
