--- a/Discover-Launch/assets/www/card/css/discoverCard.css
+++ b/Discover-Launch/assets/www/card/css/discoverCard.css
@@ -1536,7 +1536,7 @@ border-right: 1px solid #8A9499;
 height: 20px;
 line-height: 22px;
 }
-.smallText{
+.subHeader .smallText{
 	font-size: 5px;
 position: relative;
 right: 76px;
@@ -2331,6 +2331,7 @@ h2.recent_ac_activity_h2 {
 	color: red;
 	font-size: 13px !important;
 	font-weight: bold;
+	padding:0 12px;
 }
 /* #pendingPayments-pg .errormsg2{margin-left:10px;} */
 .errormsg2 h1 {
@@ -2939,14 +2940,9 @@ ol.lifont li {
 	padding: 0 15px 0 15px !important
 }
 .ui-btn-up-c.ui-disabled {
-	/*background-image: -webkit-linear-gradient(#ffc053, #f97a23 50%, #f36a0f 51%, #ef6713) !important;*/
-	/*background-image: -webkit-gradient(linear, left top, left bottom, from(#a2a2a2),
-		to(#818181), color-stop(0.5, #a2a2a2), color-stop(0.51, #818181) ) !important;*/
 	background: #d8dde0 !important;
 	border: 1px solid #ffffff;
 	color: #e8eced;
-	/*border-radius: 4px !important;
-	-webkit-border-radius: 4px !important;*/
 	font-weight: bold;
 	font-size: 12px;
 	text-shadow: none;
@@ -4349,13 +4345,13 @@ input.textInput, input.numInput {
 	position:relative;
 }
 .wrapperSpanDate {
-	width: 78px !important;
+	width: 85px !important;
 }
 .wrapperSpanDate2 {
-	width: 70px !important;
+	width: 80px !important;
 }
 .wrapperSpanDate3 {
-	width: 70px !important;
+	width: 80px !important;
 	margin: 22px 0px 8px 0px !important;
 }
 .wrapperSpanDate4 {
@@ -4514,7 +4510,7 @@ bottom: 60px;
 	border-right: solid 1px red !important;
 }
 #account-activity .ui-content{
-	overflow-x: visible;
+	overflow: visible !important;   /* 13.3 global change 29/07/13 */
 	margin-bottom:40px;
 }
 #mangedummyID .r3matchbtn .ui-btn-text {
@@ -4547,7 +4543,7 @@ margin: 0px 3px 0px 3px !important;
 }
 /* 13.3 Global change ends */
 #directDeposit1-pg .ui-content {
-	overflow-y: hidden;
+	overflow:visible !important;	/* 13.3 Global change ends */
 }
 /* 13.3 global change  */
 #statementCredit1-pg .ui-content {
