--- a/Discover-Launch/assets/www/card/css/discoverCardR4.css
+++ b/Discover-Launch/assets/www/card/css/discoverCardR4.css
@@ -1673,7 +1673,7 @@ only screen and (min-device-pixel-ratio: 1.5)
 #search #r4-wrap #keywords{margin:5px 3px 0 0 !important; padding:4px !important;} global change*/
 	
 #search #r4-wrap #js-date-picker-range input {
-	width: 65px;
+	width: 94%;
 	font-size: 13px !important;
 }	
 	
@@ -1690,7 +1690,7 @@ only screen and (min-device-pixel-ratio: 1.5)
 }
 
 #search #js-date-picker-specific .picker-input{
-	width:94% !important;
+	width:98% !important;
 }
 
 #search #r4-wrap .ui-select{
