--- a/Discover-Launch/assets/www/card/css/referAFriend.css
+++ b/Discover-Launch/assets/www/card/css/referAFriend.css
@@ -312,9 +312,8 @@ border-bottom:1px solid #d0d0d0;
 	-border-radius: 1.5px;
 	display:none;
 	padding-left:2px;
-	
-	width:75%;
-	
+	/*13.3 global change 29/07/2013*/
+	width:94%;
 }
 
 .raf-page .ui-content-internalpages .white-box-div .share-box .subj input.ui-input-text{line-height:0 !important;}
