US7225 - 13.4 code merge 7/31 - Common Project

--- a/Discover-Commons/res/values/strings_login.xml
+++ b/Discover-Commons/res/values/strings_login.xml
@@ -88,5 +88,7 @@
 	<string name="gotoFastcheckBtnText">Quick view</string>
 	<string name="passcodeInvalidAttempt">Invalid Passcode entered. Please try again.</string>
 	<string name="forgotPasscodeText">Log in with your User ID and Password to create your new Passcode.</string>
+	<string name="passcodeOneAttempt">To protect your security, you have one attempt remaining.</string>
+	
     
 </resources>
