--- a/Discover-Card-Phone/res/layout/fastcheck_display_title_list_item.xml
+++ b/Discover-Card-Phone/res/layout/fastcheck_display_title_list_item.xml
@@ -2,45 +2,77 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     style="@style/default_list_item"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="wrap_content"  android:layout_margin="16dp"
     android:paddingBottom="@dimen/table_inner_padding" >
 
-    <Button
-        android:id="@+id/fastcheck_display_back_button"
-        style="@style/back_button_style"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentTop="true"
-        android:background="@drawable/back_normal_btn"
-        android:text="@string/back_button_text" />
+    <RelativeLayout
+        android:id="@+id/fastcheck_top"
+        android:layout_width="match_parent"  android:layout_marginBottom="16dp"
+        android:layout_height="wrap_content" >
 
-    <TextView
-        android:id="@+id/balance_label"
-        style="@style/field_copy_fastcheck_timestamp"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="10dp"
-        android:layout_toLeftOf="@+id/refresh_button"
-        android:gravity="right"/>
-     
-    <ImageButton
-        android:id="@id/refresh_button"
-        android:layout_width="30dp"
-        android:layout_height="40dp"
-        android:src="@drawable/refresh_btn"  
-       	android:background="#00000000" 
-       	android:layout_alignParentRight="true"/>
+        <Button
+            android:id="@+id/fastcheck_display_back_button"
+            style="@style/back_button_style"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentTop="true"
+            android:layout_centerVertical="true"
+            android:background="@drawable/back_normal_btn"
+            android:text="@string/back_button_text" />
 
-    <TextView
-        android:id="@+id/balance_value"
-        style="@style/title_copy_fastcheck_salutation"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignLeft="@id/balance_label"
-        android:layout_alignParentLeft="true"
-        android:layout_below="@id/fastcheck_display_back_button"
-        android:layout_marginTop="18dp" />
+        <TextView
+            android:id="@+id/balance_label"
+            style="@style/field_copy_fastcheck_timestamp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerVertical="true"
+            android:layout_margin="8dp"
+            android:layout_toLeftOf="@+id/refresh_button"
+            android:gravity="right|center_vertical"
+            />
+
+        <ImageButton
+            android:id="@id/refresh_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentRight="true"
+            android:layout_centerVertical="true"
+            android:background="#00000000"
+            android:src="@drawable/refresh_btn" />
+    </RelativeLayout>
+	<ImageView
+    	android:id="@+id/divider_line"
+        android:layout_width="match_parent"
+        android:layout_height="1sp"
+        android:layout_below="@id/fastcheck_top"
+        android:background="@color/field_stroke"
+        />
+    <RelativeLayout
+        android:id="@+id/fastcheck_slaution"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" 
+        android:layout_below="@id/fastcheck_top"
+        android:paddingBottom="@dimen/table_inner_padding"
+        android:paddingTop="@dimen/table_inner_padding" >
+
+        <ImageView
+            android:id="@+id/card_image"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentLeft="true"
+            android:paddingRight="@dimen/table_inner_padding"
+            android:visibility="visible" />
+
+        <TextView
+            android:id="@+id/balance_value"
+            style="@style/title_copy_fastcheck_salutation"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignTop="@+id/card_image"
+            android:layout_toRightOf="@+id/card_image"
+            />
+    </RelativeLayout>
 
     <LinearLayout
         android:layout_width="wrap_content"
